# transfer

./: CMakeLists.txt  README.md  build.sh
src/: Image.hpp  ImageTransfer.hpp  Untitled Diagram.drawio  main.cpp
src/ImageLoader/: Image.cpp  ImageTransfer.cpp  PngImage.cpp  PngLoader.cpp  PngLoader.hpp
src/ImageTransfer/: ImageTransfer.hpp
